--- a/style.css
+++ b/style.css
@@ -1,45 +1,74 @@
+
+
 #container, #container2 {
-  width: 1000px;
+  width: 800px;
   /*height: 140px;*/
-  height: 260px;
-  margin: 0 auto;
+  height: 390px;
   overflow: hidden;
   position: relative;
+  display: inline-block;
+}
+
+#container {
+  margin-left: 50px;
+}
+
+#container2 {
+  margin-right: 50px;
+}
+
+p {
+  font-size: 100px;
+  font-family: 'Karla', sans-serif;
+  color: white;
+  padding: 30px;
+  background-color: black;
 }
 
 .red {
   height: 100px;
   border: 10px black solid;
-  width: 450px;
-  margin: 10px auto;
+  width: 350px;
+  margin: 10px 0;
   background-color: red;
 }
 
 .green {
   height: 100px;
   border: 10px black solid;
-  width: 450px;
-  margin: 10px auto;
+  width: 350px;
+  margin: 10px 0;
   background-color: green;
 }
 
 .blue {
   height: 100px;
   border: 10px black solid;
-  width: 450px;
-  margin: 10px auto;
+  width: 350px;
+  margin: 10px 0;
   background-color: blue;
 }
 
 .button {
   height: 100px;
   border: 10px black solid;
-  width: 450px;
-  margin: 10px auto;
-  background-color: grey;
+  width: 350px;
+  margin: 10px 15px;
+  position: absolute;
 }
+
+#button1 {
+  top: 8px;
+  left: 43px;
+}
+
+#button2 {
+  top: 8px;
+  left: 847px;
+}
+
 
 #remove {
   position: absolute;
-  left: 265px;
+  left: 500px;
 }
