experimenting with responsive design

--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
-
+#alignment {
+  width: 89.99%
+  margin: 0 auto;
+}
 
 #container, #container2 {
-  width: 800px;
+  width: 47.05%;
   /*height: 140px;*/
   height: 390px;
   overflow: hidden;
@@ -9,13 +12,13 @@
   display: inline-block;
 }
 
-#container {
+/*#container {
   margin-left: 50px;
-}
+}*/
 
-#container2 {
+/*#container2 {
   margin-right: 50px;
-}
+}*/
 
 p {
   font-size: 100px;
@@ -28,7 +31,7 @@ p {
 .red {
   height: 100px;
   border: 10px black solid;
-  width: 350px;
+  width: 43.75%;
   margin: 10px 0;
   background-color: red;
 }
@@ -36,7 +39,7 @@ p {
 .green {
   height: 100px;
   border: 10px black solid;
-  width: 350px;
+  width: 43.75%;
   margin: 10px 0;
   background-color: green;
 }
@@ -44,7 +47,7 @@ p {
 .blue {
   height: 100px;
   border: 10px black solid;
-  width: 350px;
+  width: 43.75%;
   margin: 10px 0;
   background-color: blue;
 }
@@ -58,17 +61,19 @@ p {
 }
 
 #button1 {
-  top: 8px;
-  left: 43px;
+  width: 21.64%;
+  top: 1.1%;
+  left: 0;
 }
 
 #button2 {
-  top: 8px;
+  width: 21.64;
+  top: 1.1%;
   left: 847px;
 }
 
 
 #remove {
   position: absolute;
-  left: 500px;
+  /*left: 95%;*/
 }
